<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".System.Log"
    tools:layout_editor_absoluteY="81dp">

    <EditText
        android:id="@+id/passwordInput2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/email1"
        app:layout_constraintTop_toBottomOf="@+id/email1" />

    <EditText
        android:id="@+id/email1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@android:color/holo_blue_bright"

        android:text="@string/ResetPassword"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="@+id/incorrectLogin"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput2" />


    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:background="@android:color/holo_blue_bright"

        android:text="@string/Logout"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="@+id/incorrectLogin"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput2" />


    <Button
        android:id="@+id/deleteaccc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:background="@android:color/holo_blue_bright"

        android:text="@string/deleteacc"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="@+id/incorrectLogin"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput2" />

    <TextView
        android:id="@+id/incorrectLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/IncorrectLogin"
        android:textColor="#cc1520"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.451"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />
</android.support.constraint.ConstraintLayout>