<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/tutorlog"
            android:layout_width="300dp"
            android:layout_height="87dp"
            android:layout_marginStart="65dp"
            android:layout_marginLeft="65dp"
            android:layout_marginEnd="65dp"
            android:layout_marginRight="65dp"
            android:layout_marginBottom="170dp"
            android:background="@android:color/holo_blue_bright"
            android:onClick="loginClicked"
            android:text="@string/TutorLogin"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/incorrectLogin" />

        <Button
            android:id="@+id/studentlog"
            android:layout_width="0dp"
            android:layout_height="88dp"
            android:layout_marginStart="37dp"
            android:layout_marginLeft="37dp"
            android:layout_marginTop="260dp"
            android:layout_marginEnd="37dp"
            android:layout_marginRight="37dp"
            android:background="@android:color/holo_blue_bright"
            android:onClick="loginClicked"
            android:text="@string/StudentLogin"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="92dp"
            android:background="@android:color/holo_blue_bright"
            android:onClick="loginClicked"
            android:text="@string/back"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="@+id/incorrectLogin"
            app:layout_constraintTop_toBottomOf="@+id/password2" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>